<resources>
    <string name="app_name">SimpleBlog</string>
    <string name="login_btn_account">Login</string>
    <string name="register_btn">Need an Account ?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout">Logout</string>
    <string name="reg_btn_text">Create Account</string>
    <string name="reg_login_text">Already Have An Account ?</string>
    <string name="reg_confirm_pass">Re-Enter Password</string>
    <string name="reg_email">Email</string>
    <string name="reg_logo">Register Logo</string>
    <string name="reg_pass">Password</string>
    <string name="setup_name_hint">Your name</string>
    <string name="setup_account_btn">Save Account Settings</string>
    <string name="Post_description">Add Description</string>
    <string name="Post_Image_desc">Post Image</string>
    <string name="new_post_btn">Post Blog</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_notifications">Notifications</string>
    <string name="bottom_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home">Home Fragment</string>
</resources>