<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2376CD"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/regPageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/reg_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:srcCompat="@mipmap/register_logo" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/reg_email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="#EAE4E4"
        android:textColorHint="#E4E1E1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPageLogo" />

    <EditText
        android:id="@+id/reg_confirm_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/reg_confirm_pass"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textColor="#EDE3E3"
        android:textColorHint="#F1EBEB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email"
        app:layout_constraintVertical_bias="0.157"
        android:autofillHints="" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="#ED2C2C"
        android:ellipsize="end"
        android:text="@string/reg_btn_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#EFE9E9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_confirm_pass"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/reg_login_btn"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:background="#F4EEEE"
        android:padding="20dp"
        android:shadowColor="#100505"
        android:text="@string/reg_login_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_btn"
        app:layout_constraintVertical_bias="0.975" />

    <ProgressBar
        android:id="@+id/reg_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:progressBackgroundTint="#F8F5F5"
        android:progressTint="#C12020"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/regPageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="408dp"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:hint="@string/reg_pass"
        android:inputType="textPassword"
        android:padding="14dp"
        android:shadowColor="#0C0707"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFDFD"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_confirm_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email"
        app:layout_constraintVertical_bias="0.41000003"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>